--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link href="styles.css" rel="stylesheet">
-  <!-- <script src="script.js" async></script> -->
+  <script src="script.js" async></script>
   <title>Mix-Or-Match</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
           Time <span id="time-remaining">100</span>
         </div>
         <div class="game-info">
-          Time <span id="flips">0</span>
+          Flips <span id="flips">0</span>
         </div>
       </div>
       <div class="card">
